--- a/package.json
+++ b/package.json
@@ -2,15 +2,28 @@
   "name": "fe23-js2-slutprojekt-birds",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "front:start": "live-server ./frontend/",
+    "backend:start": "node --watch ./backend/main.js",
+    "start": "live-server ./frontend/; node --watch ./backend/main.js",
+    "dev": "parcel ./src/index.html",
+    "build": "parcel build ./src/index.html --dist-dir docs --public-url ./",
+    "clean": "del-cli ./.parcel-cache ./docs ./dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "parcel": "^2.12.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.28",
+    "del-cli": "^5.1.0"
   }
 }
