--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
